<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JeuDeCarte</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textViewConst">C\'est au tour de : </string>
    <string name="textButton1">Cartes Aléatoires</string>
    <string name="action_connexion">Se connecter</string>
    <string name="buttonconnexion">Se connecter</string>
    <string name="textButtonSeCoucher">Se coucher</string>
    <string name="textButtonSuivre">Suivre</string>
    <string name="textButtonRelancer">Relancer</string>
    <string name="textCreationProfil">Créer un nouveau profil</string>
    <string name="pseudo">Pseudo</string>
    <string name="password">Mot de passe</string>
    <string name="passwordverif">Vérification mot de passe</string>
    <string name="adressemail">Adresse mail</string>
    <string name="buttonCreerProfil">Créer Profil</string>
    <string name="buttonAnnuler">Annuler</string>
    <string name="dialog_message">Message</string>
    <string name="dialog_title">Titre</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>

</resources>
