<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textViewSeConnecter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPseudo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:text="Se connecter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editPseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editMdp"
        android:layout_alignEnd="@+id/editMdp"
        android:layout_alignLeft="@+id/editMdp"
        android:layout_alignRight="@+id/editMdp"
        android:layout_alignStart="@+id/editMdp"
        android:layout_marginBottom="25dp"
        android:autoText="false"
        android:editable="false"
        android:hint="@string/pseudo"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/editMdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/password"

        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp">

        <Button
            android:id="@+id/buttonSeConnecter"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cliqueBouttonConnexion"
            android:text="@string/buttonconnexion" />

        <Button
            android:id="@+id/buttonCreationCompte"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:onClick="cliqueBouttonCreationCompte"

            android:text="Vous n'avez pas de compte" />
    </LinearLayout>


</RelativeLayout>